--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+@font-face {
+  font-family: 'AnotherCastle3';
+  src: url('fonts/AnotherCastle3.woff2') format('woff2'),
+    url('fonts/AnotherCastle3.woff') format('woff');
+}
 
 body {
   margin: 0;
